# se-p1-backend

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  log.txt  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yaml  py-tests.yaml
app/: Dockerfile  docker-entrypoint.sh  requirements.txt
app/backend/api/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
app/backend/api/migrations/: 0001_initial.py  0002_alter_product_on_hand.py
app/backend/api/templates/api/: addProduct.html  addStock.html  addVendingMachine.html  add_product.html  add_stock.html  add_vending_machine.html  allStock.html  all_machines.html  all_products.html  all_stock.html  base.html  index.html  machine.html  product.html  stock.html  updateProduct.html  updateVendingMachine.html  update_product.html  update_stock.html  update_vending_machine.html  vendingMachine.html
app/backend/api/tests/: test_product_views.py  test_product_views_rf.py  test_stock_views.py  test_stock_views_rf.py  test_vending_views.py  test_vending_views_rf.py  test_views.py  tests.py
app/backend/backend/: settings.py  test_settings.py  urls.py
app/backend/portal/: models.py  urls.py  views.py
